add:background image-optimised styling of the image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
  <div class="header">
-<h1 style="color: #dd0256;">AKAN NAMING</h1>
-<p><h2 style="color: gray;"> Welcome to Akan Naming</h2></p>
+<h1 style="color: #09dd02;">AKAN NAMING</h1>
+<h2 style="color: white;"> Welcome to Akan Naming</h2>
 
  </div>
 
