add:description about the Akan Naming

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 <body>
  <div class="header">
 <h1 style="color: #09dd02;">AKAN NAMING</h1>
-<h2 style="color: white;"> Welcome to Akan Naming</h2>
+<h2 style="color: white;"> Welcome to <span style="color:#09dd02 ;">Akan</span> Naming</h2>
+
+ </div>
+ <div class="description">
+     <h2 style="color: white;"><hr>Akan Naming means </hr></h2>
+     <p style="color: white;">Akan names come from a traditional naming system <br>for people from countries such as Togo, Ivory Coast and Ghana.
+      <br> A child’s name is determined by factors surrounding<br> his or her birth. For example, the day of their birth or<br> the manner in which they were born may determine which name <br>they get irrespective of their gender.</p>
+
+
 
  </div>
 
