--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <form name="myForm" class="form" onsubmit="validate();">
             <div class="form-group">
               <label for="number">Year of Birth:</label>
-              <input type="number" class="form-control" id="year" placeholder="Year of Birth Eg: 2019 if born in 2019" name="year">
+              <input type="number" class="form-control" id="year" placeholder="Year of Birth " name="year">
             </div>
             <div class="form-group">
               <label for="month">Month of Birth:</label>
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
               <label for="date">Date of Birth:</label>
-              <input type="number" class="form-control" id="date" placeholder="Date of Birth eg 05 for May" name="date">
+              <input type="number" class="form-control" id="date" placeholder="Date of Birth " name="date">
             </div>
             <div class="form-group">
               <label for="month">Gender</label><br>
@@ -69,3 +69,8 @@
   <script src="javascript/script.js"></script>
 </body>
 </html>
+
+
+
+
+<p><span style="color: rgb(255, 0, 98);">A</span> <span style="color: rgb(34, 226, 34);">K</span> <span style="color: rgb(47, 173, 204);">A</span><span style="color: rgb(247, 141, 3);">N</span></p>
