add a logo at the header section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
  <div class="header">
-<h1 style="color: #09dd02;">AKAN NAMING</h1><br>
-<h2 style="color: white;"> Welcome to <span style="color:#09dd02 ;">Akan</span> Naming</h2>
+   <img src="logo.png" alt="" height="200px">
+
+<h2 style="color: white;"> Welcome to <span style="color:#69f164 ;">Akan</span> Naming</h2>
 
  </div>
  
