--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <div class="header">
-   <img src="logo.png" alt="" height="200px">
+   <img src="logo.png" alt="" height="150px">
 
 <h2 style="color: white;"> Welcome to <span style="color:#69f164 ;">Akan</span> Naming</h2>
 
@@ -66,12 +66,12 @@
         </div>
     </div>
 
-
+    <p style="font-size: 30px;"><span style="color: rgb(255, 0, 98);">A</span> <span style="color: rgb(34, 226, 34);">K</span> <span style="color: rgb(47, 173, 204);">A</span><span style="color: rgb(247, 141, 3);">N</span></p>
   <script src="javascript/script.js"></script>
+  
 </body>
 </html>
 
 
 
 
-<p><span style="color: rgb(255, 0, 98);">A</span> <span style="color: rgb(34, 226, 34);">K</span> <span style="color: rgb(47, 173, 204);">A</span><span style="color: rgb(247, 141, 3);">N</span></p>
