--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
           <p id="results"> </p>
         </div>
     </div>
-
+     <div class="last">
     <p style="font-size: 30px;"><span style="color: rgb(255, 0, 98);">A</span> <span style="color: rgb(34, 226, 34);">K</span> <span style="color: rgb(47, 173, 204);">A</span><span style="color: rgb(247, 141, 3);">N</span></p>
+  </div>
+    <div class="footer">
+      <p>Copyright © 2021:Flora Chepchirchir</p>
+
+
+    </div>
+    
   <script src="javascript/script.js"></script>
   
 </body>
