--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               <input type="text" class="form-control" id="month" placeholder="Month of Birth" name="month">
                           </div>
                        <div class="form-group">
-                  <label for="date">Date of Birth:</label>
-              <input type="text" class="form-control" id="date" placeholder="Date of Birth " name="date">
+                  <label for="day">Date of Birth:</label>
+              <input type="text" class="form-control" id="day" placeholder="Date of Birth " name="day">
             </div>
                      <div class="form-group">
                       
@@ -52,12 +52,12 @@
                                <div class="form-check-inline"> 
 
                  <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="gender" id="gender" value="male" checked>&nbsp; Male
+                  <input type="radio" class="form-check-input" id="gender" value="male">&nbsp; Male
                 </label>
               </div>
               <div class="form-check-inline">
                 <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="gender" id="gender" value="female" >&nbsp; Female 
+                  <input type="radio" class="form-check-input" id="gender" value="female" >&nbsp; Female 
                 </label>
               </div>
             </div>
